--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/tynril/rgoap"
 documentation = "https://tynril.github.io/rgoap"
 keywords = ["goap", "ai", "action-planning"]
 readme = "README.md"
+edition = "2018"
 
 [features]
 default = [ ]
@@ -16,7 +17,7 @@ use_serde = [ "serde", "serde_derive" ]
 [dependencies]
 serde = { version = "^1.0", optional = true }
 serde_derive = { version = "^1.0", optional = true }
-pathfinding = "^0.7"
+pathfinding = "^2"
 
 [dev-dependencies]
 serde_json = "^1.0"
